# githost-mcp

./: .env.example  .gitignore  .gitleaks.toml  .woodpecker.yml  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  ecosystem.config.js  pyproject.toml
src/githost_mcp/: __init__.py  audit.py  config.py  observability.py  security.py  server.py
src/githost_mcp/_providers/: gitea_client.py  github_client.py  gitlab_client.py
src/githost_mcp/tools/: audit_query.py  git_local.py  gitea.py  github.py  gitlab.py  registry.py  release.py  woodpecker.py
tests/: conftest.py  test_audit.py  test_git_local.py  test_gitea.py  test_github.py  test_gitlab.py  test_release.py  test_security.py  test_woodpecker.py
